--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Welcome again.</p>
+                <p>Welcome.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <i class="material-icons">person</i>
@@ -28,9 +28,9 @@
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
-                    <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
-                        Esqueci a senha <i class="material-icons">mail</i>
+                    <input type="submit" value="To enter">
+                    <a href="esqueci.html" class="botao">
+                        I forgot the password. 
                     </a>
                 </form>
             </div>
